Couple of changes. * Add Twitter account * Make the horrible blue in dark mode slightly less horrible * Fix bibtex info in dark mode

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -25,6 +25,7 @@ $y-medium: 1.0rem;
         --red-color: var(--dark-red-color);
         --callout-red-raw: 153, 51, 51;
         --callout-alpha: 0.1;
+        --horrible-blue: blue;
     }
 }
 
@@ -35,6 +36,7 @@ $y-medium: 1.0rem;
         --red-color: var(--light-red-color);
         --callout-red-raw: 252, 146, 146;
         --callout-alpha: 0.2;
+        --horrible-blue: rgb(0, 154, 226);
     }
 }
 
@@ -45,6 +47,7 @@ $y-medium: 1.0rem;
         --red-color: var(--light-red-color);
         --callout-red-raw: 252, 146, 146;
         --callout-alpha: 0.2;
+        --horrible-blue: rgb(0, 154, 226);
     }
 }
 
